# EverybodyCodes2025

./: Readme.md  everybodycodes2025.cabal  quest01p3.hs
quest01/: p1.hs  p2.hs
quest02/: p1.hs  p2.hs  p3.hs
quest03/: quest03.hs
quest04/: quest04.hs
quest05/: part2.txt  quest05.hs
quest06/: quest06.hs
quest07/: part1.txt  part2.txt  part3.txt  quest07.hs
quest08/: part1.txt  part2.txt  part3.txt  quest08.hs
quest09/: part1.txt  part2.txt  quest09.hs
quest10/: part1.hs  part1.txt  part2.hs  part2.txt  part3.hs  part3.txt
quest11/: part1.hs  part2.hs  part2.txt  part3.hs  part3.txt
quest12/: part1.txt  part2.txt  part3.txt  part3output.txt  quest12.hs
quest13/: part1.hs  part1.txt  part2-3.hs  part2.txt  part3.txt
quest14/: part1-2.hs  part2.txt  part3.hs  part3.txt
quest15/: part1-2.hs  part1.txt  part2.txt  part3.hs  part3.txt
quest16/: part1.txt  part2.txt  part3.txt  quest16.hs
