cabal-version:      3.0
name:               everybodycodes2025
version:            0.1.0.0

common warnings
    ghc-options: -Wall

executable everybodycodes2025
    import:           warnings
    default-language: Haskell2010
    build-depends:    
        base ^>=4.18.3.0,
        split,
        containers
    hs-source-dirs:   quest16
    main-is:          quest16.hs
